[tool.poetry]
name = "ai-stock-agent"
version = "0.1.0"
description = ""
authors = ["chengqp < chengqp@neocrm.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "0.115.4"
uvicorn = "0.30.1"
aiohttp = "3.11.14"
pycryptodome = "3.18.0"
cachetools = "5.3.1"
requests = "^2.32.3"
numpy = "~1.26.4"
gmpy2 = "~2.1.5"
langchain = "^1.0.2"


[tool.poetry.dev-dependencies]
# Add any development dependencies here, if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "neocrm"
url = "http://10.60.1.10:8282/repository/pypi-group/simple/"
priority = "supplemental"