[tool.poetry]
name = "ai-stock-agent"
version = "0.1.0"
description = ""
authors = ["test < test@neocrm.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.115.4"
uvicorn = "0.30.1"
aiohttp = "3.11.14"
pycryptodome = "3.18.0"
cachetools = "5.3.1"
requests = "^2.32.3"
numpy = "~1.26.4"
pypdf2 = "^3.0.1"
aiofiles = "^25.1.0"
pandas = {version = "^2.0.0", python = ">=3.11,<3.12"}
scipy = "^1.11.0"
beautifulsoup4 = "^4.14.3"


[tool.poetry.dev-dependencies]
# Add any development dependencies here, if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
priority = "supplemental"
